src/tests/testfiles/function-calls/parameter-type-5.txt
Error at 8:25: Arguments to function 'f' don't match: float * vs int
f('z', a, *b, &a, &b, b);
                      ^
